Added snowbird829's bbmodels

--- a/src/assets/fablesfantasyrp/models/item/decoration/teaset_1.json
+++ b/src/assets/fablesfantasyrp/models/item/decoration/teaset_1.json
@@ -1,8 +1,9 @@
 {
-	"credit": "Made with Blockbench by snowbird829",
+	"credit": "Made by snowbird829 with Blockbench",
 	"textures": {
-		"1": "fablesfantasyrp:item/decoration/teaset_1/texture1",
-		"2": "fablesfantasyrp:item/decoration/teaset_1/texture2"
+		"1": "fablesfantasyrp:item/decoration/teaset_1/teaset_1_2",
+		"2": "fablesfantasyrp:item/decoration/teaset_1/teaset_1_1",
+		"particle": "fablesfantasyrp:item/decoration/teaset_1/teaset_1_1"
 	},
 	"elements": [
 		{
