--- a/src/assets/fablesfantasyrp/models/item/decoration/teaset_2.json
+++ b/src/assets/fablesfantasyrp/models/item/decoration/teaset_2.json
@@ -1,8 +1,9 @@
 {
-	"credit": "Made with Blockbench by snowbird829",
+	"credit": "Made by snowbird829 with Blockbench",
 	"textures": {
-		"1": "fablesfantasyrp:item/decoration/teaset_2/texture1",
-		"2": "fablesfantasyrp:item/decoration/teaset_2/texture2"
+		"1": "fablesfantasyrp:item/decoration/teaset_2/teaset_2_1",
+		"2": "fablesfantasyrp:item/decoration/teaset_2/teaset_2_2",
+		"particle": "fablesfantasyrp:item/decoration/teaset_2/teaset_2_1"
 	},
 	"elements": [
 		{
@@ -328,8 +329,8 @@
 	],
 	"display": {
 		"thirdperson_righthand": {
-			"rotation": [65.08, 45.76, 2.46],
-			"translation": [-6, 4, 5.75]
+			"rotation": [65.64, 44.01, 1.7],
+			"translation": [-5.5, 4, 5.75]
 		},
 		"thirdperson_lefthand": {
 			"rotation": [-107.64, 44.26, 179.03],
@@ -347,7 +348,7 @@
 			"translation": [0, 4, 0]
 		},
 		"gui": {
-			"translation": [0, 6.25, 0]
+			"translation": [0, 6, 0]
 		},
 		"head": {
 			"translation": [0, 14.75, 0]
